# Website-practice

./: .gitignore  README.md  hs1.hs  index.html  index.js  packages.dhall  preload.js  spago.dhall
backEnd/myServer/: CHANGELOG.md  myServer.cabal
backEnd/myServer/.stack-work/: stack.sqlite3
backEnd/myServer/.stack-work/ghci/e4ef8f21/: cabal_macros.h
backEnd/myServer/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
backEnd/myServer/src/: API.hs  Error.hs  General.hs  Http.hs  Main.hs  Request.hs  Respond.hs
backEnd/myServer/src/Cut/: Cut.hs  Main.hs  MakeCuts.hs
backEnd/myServer/static/test_sendFile/: 123.txt
frontEnd/: packages.dhall  spago.dhall
frontEnd/src/: Main.purs
frontEnd/src/Electron/: Dialogs.js  Dialogs.purs
frontEnd/src/FFI/Electron/: Dialogs.purs
frontEnd/src/FFI/JS/: FileSystem.js  FileSystem.purs
frontEnd/src/Foreign/: URL.js  URL.purs
frontEnd/src/MyLibrary/FileSystem/: FileSystem.purs
frontEnd/src/MyLibrary/Http/: JSON.purs  Response.purs
frontEnd/src/Widget/: CutVideo.purs  DoubleInput.purs  DownloadFile.purs  FetchDevice.purs  UploadFile.purs  ViewFile.purs
frontEnd/src/Widget/CutVideo/: CutCutCut.purs
