cabal-version:       2.2

name:                myServer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/myServer#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable myServer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
    API
    Request
    Respond
    Error
    General
    Http
    Cut.MakeCuts
  build-depends:       base >=4.7 && <5,
                       bytestring,
                       filepath,
                       directory,
                       network,
                       split,
                       containers,
                       text,
                       uri-encode,
                       aeson,
                       transformers >=0.5,
                       process >=1.6,
                       time,
                       regex-tdfa,

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
